// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Address: Address details for owners and walkers.
Owner: Represents the owner of a dog.
Walker: Represents a person who walks dogs.
Complaint: Represents complaints lodged by dog owners.
Dog: Represents a dog that is part of the dog walking business.
DogWalk: Junction table for many-to-many relationship between dogs and walks.
Walk: A scheduled walk for one or more dogs.
Enrollment: Records of dog enrollments for various walking plans.
Service: Different services offered by the business.
Feedback: Feedback from owners about the dog walking service.
Incident: Incidents or issues that occurred during a walk.
Payment: Payment records for the dog walking service.
Promotion: Promotions and discounts offered to owners.
Schedule: Scheduling details and availability for walkers.
WalkerService: Junction table for many-to-many relationship between walkers and services.
'''
}

Table Address {
    id INTEGER [primary key]
    street VARCHAR 
    city VARCHAR 
    state VARCHAR 
    zip_code VARCHAR 
    owner_id INTEGER 
    walker_id INTEGER 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    phone_number VARCHAR 
    email VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    name VARCHAR 
    experience_years INTEGER 
    hourly_rate FLOAT 
    }

Table Complaint {
    id INTEGER [primary key]
    owner_id INTEGER 
    description TEXT 
    complaint_date DATETIME 
    }

Table Dog {
    id INTEGER [primary key]
    name VARCHAR 
    breed VARCHAR 
    age INTEGER 
    owner_id INTEGER 
    }

Table DogWalk {
    id INTEGER [primary key]
    dog_id INTEGER 
    walk_id INTEGER 
    }

Table Walk {
    id INTEGER [primary key]
    walker_id INTEGER 
    date_time DATETIME 
    duration_minutes INTEGER 
    }

Table Enrollment {
    id INTEGER [primary key]
    dog_id INTEGER 
    service_id INTEGER 
    enrollment_date DATETIME 
    status VARCHAR 
    }

Table Service {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    base_rate FLOAT 
    }

Table Feedback {
    id INTEGER [primary key]
    owner_id INTEGER 
    walker_id INTEGER 
    rating INTEGER 
    comments TEXT 
    feedback_date DATETIME 
    }

Table Incident {
    id INTEGER [primary key]
    walk_id INTEGER 
    description TEXT 
    incident_date DATETIME 
    }

Table Payment {
    id INTEGER [primary key]
    owner_id INTEGER 
    walk_id INTEGER 
    amount FLOAT 
    payment_date DATETIME 
    }

Table Promotion {
    id INTEGER [primary key]
    code VARCHAR 
    discount_percentage FLOAT 
    valid_from DATETIME 
    valid_until DATETIME 
    }

Table Schedule {
    id INTEGER [primary key]
    walker_id INTEGER 
    available_from DATETIME 
    available_to DATETIME 
    }

Table WalkerService {
    id INTEGER [primary key]
    walker_id INTEGER 
    service_id INTEGER 
    }



// Relationships
    Ref: Address.(owner_id) < Owner.(id)
    Ref: Address.(walker_id) < Walker.(id)
    Ref: Complaint.(owner_id) < Owner.(id)
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: DogWalk.(dog_id) < Dog.(id)
    Ref: DogWalk.(walk_id) < Walk.(id)
    Ref: Walk.(walker_id) < Walker.(id)
    Ref: Enrollment.(dog_id) < Dog.(id)
    Ref: Enrollment.(service_id) < Service.(id)
    Ref: Feedback.(owner_id) < Owner.(id)
    Ref: Feedback.(walker_id) < Walker.(id)
    Ref: Incident.(walk_id) < Walk.(id)
    Ref: Payment.(owner_id) < Owner.(id)
    Ref: Payment.(walk_id) < Walk.(id)
    Ref: Schedule.(walker_id) < Walker.(id)
    Ref: WalkerService.(service_id) < Service.(id)
    Ref: WalkerService.(walker_id) < Walker.(id)
